allprojects {
    apply plugin: 'war'
    group = 'org.exam'
    version = '1.0'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
}



subprojects {
    [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'

    buildscript {
        repositories {
            maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
            jcenter()
        }
        dependencies {
            //classpath 'com.android.tools.build:gradle:2.2.3'

            // NOTE: Do not place your application dependencies here; they belong
            // in the individual module build.gradle files
        }
    }
    repositories {
        mavenLocal()
        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
    }
}